feat: add validation and test
